@@ -5,6 +5,9 @@
 * FEATURE: Add experimental support for LDAP.
 * BUG: Fixes for MS SQL issues, provided by Scott Croco (scroco).
 * BUG: "Login already exists" error when trying to update user account fixed.
+* FEATURE: Add support for the __FORCETOC__ tag.
+* BUG: The __TOC__ should force a table of contents to appear, even with fewer
+  than four headings.
 * FEATURE: Remove (now unused) convert-to-file option from Special:Convert.
 * FEATURE: Updated Chinese translations from Feilong Huang (hfl).
 * FEATURE: Updated Polish translations from Robert Matyja (dlpa).
